[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/dialogs/InstallDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/projects/ProjectListItem.gd" type="Script" id=2]
[ext_resource path="res://src/dialogs/EditProjectDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://styles/FavoriteButton.tres" type="Theme" id=4]
[ext_resource path="res://styles/OverflowButton.tres" type="Theme" id=5]
[ext_resource path="res://styles/ListItem.tres" type="Theme" id=6]

[node name="ProjectListItem" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 388.0
margin_bottom = 50.0
mouse_filter = 1
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 420.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="Icon" type="TextureRect" parent="HBox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
stretch_mode = 1

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_left = 60.0
margin_top = 9.0
margin_right = 61.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Name" type="Label" parent="HBox/VBox"]
margin_right = 1.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Path" type="Label" parent="HBox/VBox"]
modulate = Color( 1, 1, 1, 0.752941 )
margin_top = 18.0
margin_right = 1.0
margin_bottom = 32.0
mouse_filter = 1
size_flags_horizontal = 3
clip_text = true

[node name="Version" type="LinkButton" parent="HBox"]
margin_left = 71.0
margin_top = 18.0
margin_right = 221.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4

[node name="LastOpened" type="Label" parent="HBox"]
margin_left = 231.0
margin_top = 18.0
margin_right = 331.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1

[node name="Favorite" type="Button" parent="HBox"]
margin_left = 341.0
margin_top = 9.0
margin_right = 373.0
margin_bottom = 41.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Favorite"
size_flags_vertical = 4
theme = ExtResource( 4 )
toggle_mode = true

[node name="Menu" type="Button" parent="HBox"]
margin_left = 383.0
margin_top = 17.0
margin_right = 415.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 16 )
size_flags_vertical = 4
theme = ExtResource( 5 )

[node name="Dialogs" type="Node" parent="."]

[node name="InstallDialog" parent="Dialogs" instance=ExtResource( 1 )]

[node name="EditProjectDialog" parent="Dialogs" instance=ExtResource( 3 )]
[connection signal="pressed" from="HBox/Version" to="." method="_on_show_version"]
[connection signal="toggled" from="HBox/Favorite" to="." method="_on_Favorite_toggled"]
[connection signal="pressed" from="HBox/Menu" to="." method="_on_Menu_pressed"]
